--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,37 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:label="LinearLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingTop="80dp"
+    android:weightSum="3"
+    android:background="@color/backGround">
 
-    <TextView android:text="Test1" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="120dp"
+        android:id="@+id/btnEmployee"
+        android:background="@color/buttons"
+        android:layout_marginLeft="40dp"
+        android:hint="@string/Employee"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:textColor="@color/buttonsText"
+        android:layout_marginTop="20dp"
+        />
 
-</RelativeLayout>
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="120dp"
+        android:id="@+id/btnManager"
+        android:background="@color/buttons"
+        android:layout_marginLeft="40dp"
+        android:hint="@string/Manager"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"/>
+
+
+
+</LinearLayout>
