--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -18,8 +18,7 @@
         android:textSize="50sp"
         android:textStyle="bold"
         android:textColor="@color/buttonsText"
-        android:layout_marginTop="20dp"
-        />
+        android:layout_marginTop="20dp"/>
 
     <Button
         android:layout_width="300dp"
@@ -31,7 +30,5 @@
         android:textSize="50sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"/>
-
-
 
 </LinearLayout>
