--- a/app/src/main/res/layout/orders.xml
+++ b/app/src/main/res/layout/orders.xml
@@ -3,14 +3,25 @@
     android:label="LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="10dp"
     android:orientation="vertical"
-    android:paddingTop="80dp"
     android:weightSum="3"
     android:background="@color/backGround">
 
     <!--
     This listview will be created with a custom adapter
     -->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_order"
+        android:id="@+id/button"
+        android:background="@color/buttons"
+        android:textStyle="bold"
+        android:layout_marginRight="10dp"
+        android:padding="5dp"
+        android:layout_gravity="right" />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
