--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,13 @@
 <resources>
     <color name="backGround">#E0F7FA</color>
     <color name="buttons">#80DEEA</color>
-    <color name="buttonsText">#FFFFFF</color>
+    <color name="buttonsText">#000000</color>
+    <!--
+    Product Colors (will be generated programmatically)
+    -->
+    <color name="productDrink">#26C6DA</color>
+    <color name="productMenu">#B2EBF2</color>
+    <color name="productAlc">#00838F</color>
+    <color name="productDessert">#00ACC1</color>
+    <color name="productEntry">#00ACC1</color>
 </resources>
