--- a/app/src/main/res/layout/edit_product.xml
+++ b/app/src/main/res/layout/edit_product.xml
@@ -97,7 +97,18 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"/>
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:id="@+id/save_button"
+        android:background="@color/buttons"
+        android:layout_marginTop="30dp"
+        android:padding="15dp"
+        android:layout_gravity="center_horizontal"
+        android:textSize="35dp"
+        android:textStyle="bold"/>
 
 </LinearLayout>
