--- a/app/src/main/res/layout/orders.xml
+++ b/app/src/main/res/layout/orders.xml
@@ -25,5 +25,5 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"/>
+        android:id="@+id/listViewOrders"/>
 </LinearLayout>
