--- a/app/src/main/res/layout/products_view.xml
+++ b/app/src/main/res/layout/products_view.xml
@@ -6,7 +6,7 @@
     android:paddingTop="10dp"
     android:orientation="vertical"
     android:weightSum="3"
-    android:background="@color/backGround">s
+    android:background="@color/backGround">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
