--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -4,14 +4,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/backGround">
 
     <ImageButton
-        android:layout_width="200dp"
-        android:layout_height="180dp"
-        android:background="@drawable/logo"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="90dp"/>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/main_logo"
+        android:layout_marginTop="70dp"
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +20,7 @@
         android:textSize="40dp"
         android:text="@string/version"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="60dp"/>
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,7 +28,7 @@
         android:textSize="20dp"
         android:text="@string/copyRight"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="60dp"/>
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,7 +36,7 @@
         android:textSize="20dp"
         android:text="@string/allRights"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="110dp"/>
+        android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,7 +44,7 @@
         android:textSize="20dp"
         android:text="@string/email"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="100dp"/>
+        android:layout_gravity="center"/>
 
 
 
