--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -6,40 +6,37 @@
     android:weightSum="3"
     android:background="@color/backGround">
     <Button
-        android:layout_width="300dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:id="@+id/btnOrders"
         android:background="@color/buttons"
-        android:layout_marginLeft="40dp"
         android:hint="@string/orders"
-        android:textSize="50sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="@color/buttonsText"
-        android:layout_marginTop="60dp"
-        android:onClick="goToOrders"/>
-
+        android:layout_marginTop="40dp"
+        android:onClick="goToOrders"
+        android:layout_gravity="center"/>
     <Button
-        android:layout_width="300dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:id="@+id/btnProducts"
         android:background="@color/buttons"
-        android:layout_marginLeft="40dp"
         android:hint="@string/products"
-        android:textSize="50sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
-        android:onClick="goToProducts"/>
-
+        android:onClick="goToProducts"
+        android:layout_gravity="center"/>
     <Button
-        android:layout_width="300dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:id="@+id/btnDollar"
         android:background="@color/buttons"
-        android:layout_marginLeft="40dp"
         android:hint="@string/turnovers"
-        android:textSize="50sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
-        android:onClick="goToTurnovers"/>
-
+        android:onClick="goToTurnovers"
+        android:layout_gravity="center"/>
 </LinearLayout>
