--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,12 +2,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
-
+    tools:context=".menu">
     <item
-        android:icon="@drawable/ic_action_info"
-        android:title="@string/action_info"
-        app:showAsAction="always"
-        android:id="@+id/iconInfo"/>
-
+        android:title="@string/user_management"
+        android:showAsAction="never"
+        android:id="@+id/userManagementButton"/>
+    <item
+        android:title="@string/logout"
+        android:showAsAction="never"
+        android:id="@+id/logoutMenu"/>
 </menu>
