--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="backGround">#E0F7FA</color>
-    <color name="buttons">#80DEEA</color>
+    <color name="backGround">#78909C</color>
+    <color name="buttons">#CFD8DC</color>
     <color name="buttonsText">#000000</color>
     <!--
     Product Colors (will be generated programmatically)
     -->
-    <color name="productDrink">#26C6DA</color>
-    <color name="productMenu">#B2EBF2</color>
-    <color name="productAlc">#00838F</color>
-    <color name="productDessert">#00ACC1</color>
-    <color name="productEntry">#00ACC1</color>
-    <color name="text_newProduct">#00ACC1</color>
+    <color name="product_cat0">#BCAAA4</color>
+    <color name="product_cat1">#A1887F</color>
+    <color name="product_cat2">#8D6E63</color>
+    <color name="product_cat3">#795548</color>
+    <color name="product_cat4">#5D4037</color>
+
+    <color name="text_color">#000000</color>
 </resources>
